[tool.poetry]
name = "pandadogs"
version = "0.1.0"
description = ""
authors = ["kanga333 <e411z7t40w@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
datadog = "^0.40.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
flake8 = "^3.9.0"
isort = "^5.8.0"
pytest = "^6.2.3"
pytest-mock = "^3.5.1"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
